Solved login notification conflict issues

--- a/app/styles/addNotification.css
+++ b/app/styles/addNotification.css
@@ -272,7 +272,7 @@
   min-height: 220px;
 }
 
-.success-icon {
+.add-notification-success-icon {
   width: 64px;
   height: 64px;
   color: var(--theme-color);
