Solved button disabled style

--- a/app/styles/randomSnaps.css
+++ b/app/styles/randomSnaps.css
@@ -215,7 +215,7 @@
 }
 
 .generate-button:disabled {
-  background: var(--foreground);
+  background: var(--theme-color);
   cursor: not-allowed;
   opacity: 0.7;
 }
